feat: add data, working notebook

--- a/MIWAE_Pytorch_exercises_demo_ProbAI.ipynb
+++ b/MIWAE_Pytorch_exercises_demo_ProbAI.ipynb
@@ -246,62 +246,64 @@
       "source": [
         "xfull = (data - np.mean(data,0))/np.std(data,0)\n",
         "n = xfull.shape[0] # number of observations\n",
-        "p = xfull.shape[1] # number of features"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "_Ct5EDgdXxJD"
-      },
-      "source": [
-        "We will remove uniformy at random 50% of the data. This corresponds to a *missing completely at random (MCAR)* scenario."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "U8A94e8tX8ta"
-      },
-      "outputs": [],
-      "source": [
-        "np.random.seed(1234)\n",
+        "p = xfull.shape[1] # number of features\n",
+        "xfull = np.random.permutation(xfull)  # Randomly permute the data\n",
         "\n",
-        "perc_miss = 0.5 # 50% of missing data\n",
-        "xmiss = np.copy(xfull)\n",
-        "xmiss_flat = xmiss.flatten()\n",
-        "miss_pattern = np.random.choice(n*p, np.floor(n*p*perc_miss).astype(np.int64), replace=False)\n",
-        "xmiss_flat[miss_pattern] = np.nan \n",
-        "xmiss = xmiss_flat.reshape([n,p]) # in xmiss, the missing values are represented by nans\n",
-        "mask = np.isfinite(xmiss) # binary mask that indicates which values are missing"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "colab_type": "text",
-        "id": "uj0YaRppuvw4"
-      },
-      "source": [
-        "A simple way of imputing the incomplete data is to replace the missing values by zeros. This x_hat0 is what will be fed to our encoder."
+        "mnar_size = int(0.5 * n)  # 10% of the data will be MNAR\n",
+        "mcar_size = int(0.25 * n)  # 10% of the data will be MCAR\n",
+        "test_size = n - mnar_size - mcar_size  # Remaining data for testing\n",
+        "data_mnar, data_mcar, data_test = data[:mnar_size], data[mnar_size:mnar_size+mcar_size], data[mnar_size+mcar_size:]"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "colab": {},
-        "colab_type": "code",
-        "id": "PorBq9ncYZ8t"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "xhat_0 = np.copy(xmiss)\n",
-        "xhat_0[np.isnan(xmiss)] = 0"
+        "\n",
+        "np.random.seed(1234)\n",
+        "n,p = data_mcar.shape\n",
+        "perc_miss = 0.5 # 50% of missing data\n",
+        "data_mcar_nan = np.copy(data_mcar)\n",
+        "mask_mcar = np.random.rand(n) < perc_miss # create a mask for missing data\n",
+        "mask_mcar = np.concatenate([mask_mcar.reshape(-1, 1),\n",
+        "                            np.ones((data_mcar.shape[0],data.shape[1]))]\n",
+        "                            ,axis=1) # duplicate the mask for all features\n",
+        "for i in range(data_mcar.shape[0]):\n",
+        "    if not mask_mcar[i,0]: # if the first column is missing\n",
+        "        data_mcar_nan[i,0] = np.nan\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# MNAR Pattern\n",
+        "np.random.seed(1234)\n",
+        "full_mean, full_std = np.mean(data,0), np.std(data,0)\n",
+        "missing_mnar = data_mnar[:,0]> full_mean[0] + 0.01 * full_std[0] # missing pattern based on the first feature\n",
+        "data_mnar_nan = np.copy(data_mnar)\n",
+        "mask = np.ones_like(data_mnar, dtype=bool) # initialize mask with all True\n",
+        "for i in range(data_mnar.shape[0]):\n",
+        "    if missing_mnar[i]: # if the condition is met, set the corresponding row to False\n",
+        "        mask[i,0] = False\n",
+        "for i in range(data_mnar.shape[0 ]):\n",
+        "    if missing_mnar[i]:  # randomly set some features to be missing\n",
+        "        data_mnar_nan[i,0] = np.nan\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "xhat_0 = np.copy(data_mnar_nan)\n",
+        "xhat_0[np.isnan(data_mnar_nan)] = 0"
       ]
     },
     {
@@ -424,7 +426,8 @@
         "    print(f\"Current CUDA device: {torch.cuda.current_device()}\")\n",
         "    print(f\"CUDA device name: {torch.cuda.get_device_name()}\")\n",
         "\n",
-        "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "# device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+        "device = \"cpu\"\n",
         "print(f\"Using device: {device}\")"
       ]
     },
@@ -523,8 +526,8 @@
       },
       "outputs": [],
       "source": [
-        "encoder.cuda() # we'll use the GPU\n",
-        "decoder.cuda()"
+        "encoder.to(device) # we'll use the GPU\n",
+        "decoder.to(device)"
       ]
     },
     {
@@ -647,7 +650,7 @@
       },
       "outputs": [],
       "source": [
-        "def miwae_impute(iota_x,mask,L):\n",
+        "def miwae_impute(iota_x,mask,L, device,):\n",
         "  batch_size = iota_x.shape[0]\n",
         "  out_encoder = encoder(iota_x)\n",
         "  q_zgivenxobs = td.Independent(td.Normal(loc=out_encoder[..., :d],scale=torch.nn.Softplus()(out_encoder[..., d:(2*d)])),1)\n",
@@ -660,8 +663,8 @@
         "  all_scales_obs_model = torch.nn.Softplus()(out_decoder[..., p:(2*p)]) + 0.001\n",
         "  all_degfreedom_obs_model = torch.nn.Softplus()(out_decoder[..., (2*p):(3*p)]) + 3\n",
         "  \n",
-        "  data_flat = torch.Tensor.repeat(iota_x,[L,1]).reshape([-1,1]).cuda()\n",
-        "  tiledmask = torch.Tensor.repeat(mask,[L,1]).cuda()\n",
+        "  data_flat = torch.Tensor.repeat(iota_x,[L,1]).reshape([-1,1]).to(device)\n",
+        "  tiledmask = torch.Tensor.repeat(mask,[L,1]).to(device)\n",
         "  \n",
         "  all_log_pxgivenz_flat = torch.distributions.StudentT(loc=all_means_obs_model.reshape([-1,1]),scale=all_scales_obs_model.reshape([-1,1]),df=all_degfreedom_obs_model.reshape([-1,1])).log_prob(data_flat)\n",
         "  all_log_pxgivenz = all_log_pxgivenz_flat.reshape([L*batch_size,p])\n",
@@ -732,25 +735,34 @@
         "\n",
         "for ep in range(1,n_epochs):\n",
         "  perm = np.random.permutation(n) # We use the \"random reshuffling\" version of SGD\n",
-        "  batches_data = np.array_split(xhat_0[perm,], n/bs)\n",
-        "  batches_mask = np.array_split(mask[perm,], n/bs)\n",
+        "  if n>bs:\n",
+        "    batches_data = np.array_split(xhat_0[perm,], n/bs)\n",
+        "    batches_mask = np.array_split(mask[perm,], n/bs)\n",
+        "  else :\n",
+        "    batches_data = [xhat_0[perm,]]\n",
+        "    batches_mask = [mask[perm,]]\n",
         "  for it in range(len(batches_data)):\n",
         "    optimizer.zero_grad()\n",
         "    encoder.zero_grad()\n",
         "    decoder.zero_grad()\n",
-        "    b_data = torch.from_numpy(batches_data[it]).float().cuda()\n",
-        "    b_mask = torch.from_numpy(batches_mask[it]).float().cuda()\n",
+        "    b_data = torch.from_numpy(batches_data[it]).float().to(device)\n",
+        "    b_mask = torch.from_numpy(batches_mask[it]).float().to(device)\n",
         "    loss = miwae_loss(iota_x = b_data,mask = b_mask)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "  if ep % 100 == 1:\n",
         "    print('Epoch %g' %ep)\n",
-        "    print('MIWAE likelihood bound  %g' %(-np.log(K)-miwae_loss(iota_x = torch.from_numpy(xhat_0).float().cuda(),mask = torch.from_numpy(mask).float().cuda()).cpu().data.numpy())) # Gradient step      \n",
+        "    print('MIWAE likelihood bound  %g' %(-np.log(K)-miwae_loss(iota_x = torch.from_numpy(xhat_0).float().to(device),mask = torch.from_numpy(mask).float().to(device)).cpu().data.numpy())) # Gradient step      \n",
         "    \n",
         "    ### Now we do the imputation\n",
         "    \n",
-        "    xhat[~mask] = miwae_impute(iota_x = torch.from_numpy(xhat_0).float().cuda(),mask = torch.from_numpy(mask).float().cuda(),L=10).cpu().data.numpy()[~mask]\n",
-        "    err = np.array([mse(xhat,xfull,mask)])\n",
+        "    xhat[~mask] = miwae_impute(\n",
+        "                               iota_x = torch.from_numpy(xhat_0).float().to(device),\n",
+        "                               mask = torch.from_numpy(mask).float().to(device),\n",
+        "                               L=10,\n",
+        "                               device=device,\n",
+        "                               ).cpu().data.numpy()[~mask]\n",
+        "    err = np.array([mse(xhat,data_mnar,mask)])\n",
         "    mse_train = np.append(mse_train,err,axis=0)\n",
         "    print('Imputation MSE  %g' %err)\n",
         "    print('-----')"
@@ -792,13 +804,13 @@
       "source": [
         "missforest = IterativeImputer(max_iter=20, estimator=ExtraTreesRegressor(n_estimators=100))\n",
         "iterative_ridge = IterativeImputer(max_iter=20, estimator=BayesianRidge())\n",
-        "missforest.fit(xmiss)\n",
-        "iterative_ridge.fit(xmiss)\n",
-        "xhat_mf = missforest.transform(xmiss)\n",
-        "xhat_ridge = iterative_ridge.transform(xmiss)\n",
+        "missforest.fit(data_mnar_nan)\n",
+        "iterative_ridge.fit(data_mnar_nan)\n",
+        "xhat_mf = missforest.transform(data_mnar_nan)\n",
+        "xhat_ridge = iterative_ridge.transform(data_mnar_nan)\n",
         "mean_imp = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
-        "mean_imp.fit(xmiss)\n",
-        "xhat_mean = mean_imp.transform(xmiss)"
+        "mean_imp.fit(data_mnar_nan)\n",
+        "xhat_mean = mean_imp.transform(data_mnar_nan)"
       ]
     },
     {
@@ -854,7 +866,7 @@
       "version": "0.3.2"
     },
     "kernelspec": {
-      "display_name": "fiftyone",
+      "display_name": "hackathon0403",
       "language": "python",
       "name": "python3"
     },
@@ -868,7 +880,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.12"
+      "version": "3.9.21"
     }
   },
   "nbformat": 4,
