feat: correct the notebook

--- a/MIWAE_Pytorch_exercises_demo_ProbAI.ipynb
+++ b/MIWAE_Pytorch_exercises_demo_ProbAI.ipynb
@@ -163,8 +163,8 @@
       },
       "outputs": [],
       "source": [
-        "#from sklearn.datasets import load_breast_cancer\n",
-        "#data = load_breast_cancer(True)[0]"
+        "from sklearn.datasets import load_breast_cancer\n",
+        "data = load_breast_cancer()['data']"
       ]
     },
     {
@@ -828,9 +828,9 @@
       "outputs": [],
       "source": [
         "plt.plot(range(1,n_epochs,100),mse_train,color=\"blue\")\n",
-        "plt.axhline(y=mse(xhat_mf,xfull,mask),  linestyle='-',color=\"red\")\n",
-        "plt.axhline(y=mse(xhat_ridge,xfull,mask),  linestyle='-',color=\"orange\")\n",
-        "plt.axhline(y=mse(xhat_mean,xfull,mask),  linestyle='-',color=\"green\")\n",
+        "plt.axhline(y=mse(xhat_mf,data_mnar,mask),  linestyle='-',color=\"red\")\n",
+        "plt.axhline(y=mse(xhat_ridge,data_mnar,mask),  linestyle='-',color=\"orange\")\n",
+        "plt.axhline(y=mse(xhat_mean,data_mnar,mask),  linestyle='-',color=\"green\")\n",
         "plt.legend([\"MIWAE\",\"missForest\",\"Iterative ridge\", \"Mean imputation\"])\n",
         "plt.title(\"Imputation MSE\")\n",
         "plt.xlabel(\"Epochs\")\n",
